<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reto.Home"
    android:orientation="vertical"
    android:weightSum="1">

    <FrameLayout
        android:id="@+id/relative"
        android:layout_weight=".8"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:id="@+id/paso1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_paso_1"
                style="@style/EstiloTextoPaso"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/paso2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_paso_2"
                style="@style/EstiloTextoPaso"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/paso3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_paso_3"
                style="@style/EstiloTextoPaso"
                android:layout_marginBottom="@dimen/fab_margin"
                />

            <Button
                android:id="@+id/continuar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_boton_continuar"
                style="@style/Widget.AppCompat.Button.Colored"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/registro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_paso_registro"
                style="@style/EstiloTextoPaso"
                android:layout_marginBottom="@dimen/fab_margin"
                />

            <EditText
                android:id="@+id/correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/texto_hint_registro"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="@dimen/fab_margin"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_boton_continuar"
                style="@style/Widget.AppCompat.Button.Colored"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_bienvenida"
                style="@style/EstiloTextoPaso"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <TextView
                android:id="@+id/usuarioEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_home_correo_usuario"
                style="@style/EstiloTextoUsuario"
                android:layout_marginBottom="@dimen/fab_margin" />

            <CheckBox
                android:id="@+id/checkboxTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_checkbox"
                android:layout_marginBottom="@dimen/fab_margin"/>

            <Button
                android:id="@+id/borrarShared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_boton_borrar"
                style="@style/Widget.AppCompat.Button.Colored"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/navegacion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight=".2"
        android:gravity="center_horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/anterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_boton_anterior"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_boton_siguiente"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

</LinearLayout>